--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=167a9f48b62acbf046c09882e2566209
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=gmail://monrestocda@gmail.com:MonprojetCDA2022-@default?verify_peer=0
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
